added checkpoints for inc_max_lr

--- a/train_gpt/evaluate.ipynb
+++ b/train_gpt/evaluate.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fc03c2b0",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/teamspace/studios/this_studio/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loading weights from pretrained gpt: gpt2\n",
       "Loaded 1221 examples from CommonsenseQA (validation split)\n"
      ]
     },
@@ -17,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|██████████| 1221/1221 [09:30<00:00,  2.14it/s]"
+      "Evaluating: 100%|██████████| 1221/1221 [01:39<00:00, 12.26it/s]"
      ]
     },
     {
@@ -46,7 +55,7 @@
        " 'num_evaluated': 1221}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
